# memvdb

./: Cargo.toml  README.md
examples/: basic_usage.rs  batch_operations.rs  distance_metrics.rs  document_similarity.rs
src/: db.rs  lib.rs  replay_log.rs  similarity.rs
tests/: error_tests.rs  integration_tests.rs  performance_tests.rs  similarity_tests.rs
