[package]
name = "memvdb"
version = "0.1.0"
edition = "2024"
authors = ["Xinyu Bao <baoxinyuworks@163.com>"]
description = "A Rust library for parsing JSON objects from text streams"
license = "MIT"
repository = "https://github.com/AspadaX/memvdb"
readme = "README.md"
keywords = ["vector", "database", "in-memory", "search", "embedding"]
categories = ["database", "data-structures"]

[dependencies]
log = "0.4.27"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
