[package]
name = "memvdb"
version = "0.1.1"
edition = "2024"
authors = ["Xinyu Bao <baoxinyuworks@163.com>"]
description = "A Rust in-memory vector database"
license = "MIT"
repository = "https://github.com/AspadaX/memvdb"
readme = "README.md"
keywords = ["vector", "database", "in-memory", "search", "embedding"]
categories = ["database", "data-structures"]

[dependencies]
anyhow = "1.0.98"
log = "0.4.27"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"

[[example]]
name = "basic_usage"
doc-scrape-examples = true

[[example]]
name = "document_similarity"
doc-scrape-examples = true

[[example]]
name = "distance_metrics"
doc-scrape-examples = true

[[example]]
name = "batch_operations"
doc-scrape-examples = true
